# GLACIER_Dashboard

./: CMakeLists.txt  README.md  main.cpp  platformio.ini  requirements.txt
include/: Abrillikanager.h  DCInterface.h  Display.h  GasSensor.h  I2CInterface.h  SensorManager.h  SystemController.h  gashbeteilen.h
src/: Abrillikanager.cpp  DCInterface.cpp  Display.cpp  GasSensor.cpp  I2CInterface.cpp  SensorManager.cpp  SystemController.cpp  gashbeteilen.cpp  main.cpp
